move PrusaResearch FFF profiles to its own repository first commit with profiles made for 2.7.61.0

--- a/description.ini
+++ b/description.ini
@@ -1,6 +1,7 @@
 [vendor]
-id = VENDORID
-name = vendor name
-full_name = The Vendor Name (C)
-description = A vendor bundle for SuperSlicer\nTo be filled
-config_update_rest = SuperSlicer-org/Profile-Template
+id = PrusaResearch
+name = Prusa Research
+full_name = Prusa Research
+description = 
+config_update_rest = SuperSlicer-org/PrusaResearch-Profile
+
